--- a/basic/src/App.scss
+++ b/basic/src/App.scss
@@ -1,43 +1,61 @@
-/* Profile */
-.profile{
-  position: relative;
-  width: 300px;
-  text-align: center;
-  padding: 1rem;
-  background-color: #ebebeb;
-  border-radius: 20px;
-  margin-bottom: 1rem;
-
-}
-
-.photo{
-  width: 200px;
-  height: 200px;
-  border-radius:  100%;
-}
-
-.avatar{
-  position: relative;
-  width: 200px;
-  height: 200px;
-  margin: auto;
-}
-
-.new{
-  position: absolute;
-  left: 70%;
-  top: 10%;
-  background-color: bisque;
-  padding: 0.2rem 0.5rem;
-  border-radius: 0.5rem;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-/* Counter*/
 .container{
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+h2{
+  margin-right: auto;
+  padding: 0 30px;
+}
+
+/* Profile */
+.ex-profile{
+  .profile{
+    position: relative;
+    width: 300px;
+    text-align: center;
+    padding: 1rem;
+    background-color: #ebebeb;
+    border-radius: 20px;
+    margin-bottom: 1rem;
+  
+  }
+  
+  .photo{
+    width: 200px;
+    height: 200px;
+    border-radius:  100%;
+  }
+  
+  .avatar{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: auto;
+  }
+  
+  .new{
+    position: absolute;
+    left: 70%;
+    top: 10%;
+    background-color: bisque;
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+}
+
+/* Counter*/
+.ex-counter{
+  .banner{
+    background: orange;
+    width: 400px;
+    padding: 0.5rem;
+    text-align: center;
+    font-weight: bold;
+  }
   .counter{
     display: flex;
     flex-direction: column;
@@ -50,19 +68,20 @@
     &:hover{
       background-color: rgb(246, 243, 197);
     }
-  }
-  
-  .number{
-    font-size: 7rem;
-  }
-  
-  .button{
-    font-size: 2rem;
-    padding: 0.2rem 1rem;
-    border-radius: 0.5rem;
-    cursor:pointer;
-    background: rgb(214, 127, 12);
+    .number{
+      font-size: 7rem;
+      .total{
+        font-size: 2rem;
+        margin-left: -1.5rem;
+      }
+    }
+    
+    .button{
+      font-size: 2rem;
+      padding: 0.2rem 1rem;
+      border-radius: 0.5rem;
+      cursor:pointer;
+      background: rgb(214, 127, 12);
+    }
   }
 }
-
-
